Fix Navbar spacing. Fix picture size. Reformat home front. Reformat contact. Remove picture from about.

--- a/public/global.css
+++ b/public/global.css
@@ -1,24 +1,10 @@
-* {
-    box-sizing: border-box;
-  }
-
 body {
     font-family: 'Inter', sans-serif;
     
-    /* background-color: #CAA661; */
-    /* background-image: linear-gradient(to bottom right, #ff7dd1, #d373ff); */
-    background-image: linear-gradient(to bottom right, #ffa991, #ffb759);
-    color: black;
-}
-
-.portrait{
-    display: flex;
-    max-width: 300px;
-    height: auto;
-    border-radius: 25px;
-    border-color: black;
-    border-width: 2px;
-    padding: 2rem 2rem;
+    background-color: #CAA661; 
+    background-image: linear-gradient(to bottom right, #ff7dd1, #d373ff); 
+    background-image: linear-gradient(to bottom right, #ffa991, #ffb759); 
+    color: black; 
 }
 
 #title{
@@ -30,11 +16,9 @@ body {
 
 nav{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
-    padding-left: 2rem;
-    padding-right: 2rem;
     position: sticky;
     top: 0;
 }
@@ -49,3 +33,39 @@ p, .needsPad {
     border-radius: 4px;
 }
 
+.home-excerpt{
+    display: inline-flex;
+    padding: 0;
+    margin: 0;
+    width: 70%;
+    max-width: 600px;
+}
+
+.home-portrait{
+    display: inline-flex;
+    padding: 0;
+    margin: 0;
+    width: 30%;
+    height: auto;
+    max-width: 400px;
+
+}
+
+.portrait{
+    max-width: 100%;
+}
+
+.home-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.contact-container{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: normal;
+}
